--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,192 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  color: white !important;
+}
 
+body {
+  background-color: rgb(27, 27, 27) !important;
+}
+
+a {
+  text-decoration: none;
+}
+
+header {
+  background-color: rgb(61, 61, 61);
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 100px;
+}
+header ul {
+  list-style-type: none;
+}
+header ul .nav-item {
+  padding: 0 10px;
+}
+header ul .nav-item .nav-link {
+  transition: all 0.5s ease;
+}
+header ul .nav-item .nav-link:hover {
+  transform: scale(1.2);
+  color: #FFC107 !important;
+  transition: all 0.5s ease;
+}
+
+footer {
+  background-color: rgb(61, 61, 61);
+}
+footer ul {
+  font-size: 13px;
+}
+footer .logo {
+  width: 10%;
+}
+footer .logo-container {
+  width: 200px;
+}
+footer .logo-container a {
+  cursor: default;
+}
+footer .logo-container a .rrss-img {
+  width: 20%;
+  transition: all 0.5s ease;
+}
+footer .logo-container a .rrss-img:hover {
+  transform: scale(1.2);
+  transition: all 0.5s ease;
+}
+
+main .carousel {
+  width: 500px;
+  height: 715px;
+}
+main .carousel img {
+  height: 500px;
+  border: 3px solid #FFC107;
+}
+main .secundary-img {
+  width: 30%;
+  border: #FFC107 solid 3px;
+}
+main .local-img {
+  width: 94%;
+  border: 8px solid #FFC107;
+}
+@media (min-width: 0) and (max-width: 576px) {
+  main .carousel {
+    width: 350px;
+    height: 715px;
+  }
+  main .carousel img {
+    height: 370px;
+    border: 3px solid #FFC107;
+  }
+  main .column-mediaq {
+    display: flex;
+    flex-direction: column;
+  }
+  main .column-mediaq img {
+    width: 350px;
+    margin-top: 20px;
+  }
+  main .local-img {
+    width: 350px;
+  }
+}
+@media (min-width: 576px) and (max-width: 1200px) {
+  main .carousel {
+    width: 500px;
+    height: 715px;
+  }
+}
+
+main .about-us-box {
+  width: 700px;
+}
+
+main .wp-img {
+  width: 35px;
+}
+main .card-body {
+  background-color: rgb(44, 44, 44);
+  border: 0;
+}
+
+.consultas-bg {
+  background-image: url(../images/consultas.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+}
+
+main #maincons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main #maincons .bg-box {
+  background: rgb(27, 27, 27);
+  width: 400px;
+  border-radius: 10px;
+}
+main #maincons .bg-box h2 {
+  text-align: center;
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+main #maincons .bg-box form {
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+main #maincons .bg-box form .consultation-box {
+  position: relative;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  margin: 30px 0;
+}
+main #maincons .bg-box form .consultation-box input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background-color: rgba(51, 5, 33, 0.3);
+}
+main #maincons .bg-box form .consultation-box textarea {
+  width: 100%;
+  font-size: 16px;
+  border: none;
+  background-color: rgba(51, 5, 33, 0.3);
+}
+main #maincons .send-box {
+  padding: 0 0 20px 0;
+}
+main #maincons .buttom {
+  box-shadow: inset 0px 1px 0px 0px #fce2c1;
+  background: linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+  background-color: #ffc477;
+  border-radius: 6px;
+  border: 1px solid #eeb44f;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ff9d00;
+}
+main #maincons .buttom :hover {
+  background: linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+  background-color: #fb9e25;
+}
+main #maincons .buttom :active {
+  position: relative;
+  top: 1px;
+}
 
 /*# sourceMappingURL=app.css.map */
