--- a/css/pages/beer.css
+++ b/css/pages/beer.css
@@ -1,3 +1,9 @@
-
+main .wp-img {
+  width: 35px;
+}
+main .card-body {
+  background-color: rgb(44, 44, 44);
+  border: 0;
+}
 
 /*# sourceMappingURL=beer.css.map */
