--- a/css/pages/consultation.css
+++ b/css/pages/consultation.css
@@ -1,3 +1,76 @@
+.consultas-bg {
+  background-image: url(../images/consultas.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+}
 
+main #maincons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main #maincons .bg-box {
+  background: rgb(27, 27, 27);
+  width: 400px;
+  border-radius: 10px;
+}
+main #maincons .bg-box h2 {
+  text-align: center;
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+main #maincons .bg-box form {
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+main #maincons .bg-box form .consultation-box {
+  position: relative;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  margin: 30px 0;
+}
+main #maincons .bg-box form .consultation-box input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background-color: rgba(51, 5, 33, 0.3);
+}
+main #maincons .bg-box form .consultation-box textarea {
+  width: 100%;
+  font-size: 16px;
+  border: none;
+  background-color: rgba(51, 5, 33, 0.3);
+}
+main #maincons .send-box {
+  padding: 0 0 20px 0;
+}
+main #maincons .buttom {
+  box-shadow: inset 0px 1px 0px 0px #fce2c1;
+  background: linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+  background-color: #ffc477;
+  border-radius: 6px;
+  border: 1px solid #eeb44f;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ff9d00;
+}
+main #maincons .buttom :hover {
+  background: linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+  background-color: #fb9e25;
+}
+main #maincons .buttom :active {
+  position: relative;
+  top: 1px;
+}
 
 /*# sourceMappingURL=consultation.css.map */
