--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,21 @@ main .about-us-box {
   width: 700px;
 }
 
+@media (min-width: 0) and (max-width: 576px) {
+  .about-us-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 2%;
+    padding: 0 200px;
+  }
+  small {
+    text-align: start;
+  }
+  p {
+    text-align: start;
+  }
+}
 main .wp-img {
   width: 35px;
 }
@@ -187,6 +202,20 @@ main #maincons .buttom :hover {
 main #maincons .buttom :active {
   position: relative;
   top: 1px;
+}
+
+@media (min-width: 0) and (max-width: 576px) {
+  .map {
+    width: 300px;
+    height: 500px;
+  }
+  img {
+    width: 300px;
+    height: auto;
+  }
+  p {
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
