--- a/css/pages/aboutus.css
+++ b/css/pages/aboutus.css
@@ -2,4 +2,20 @@ main .about-us-box {
   width: 700px;
 }
 
+@media (min-width: 0) and (max-width: 576px) {
+  .about-us-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 2%;
+    padding: 0 200px;
+  }
+  small {
+    text-align: start;
+  }
+  p {
+    text-align: start;
+  }
+}
+
 /*# sourceMappingURL=aboutus.css.map */
