--- a/scss/pages/aboutus.scss
+++ b/scss/pages/aboutus.scss
@@ -3,3 +3,18 @@ main{
         width: 700px;
     }
 }
+@media (min-width: 0) and (max-width: 576px){
+    .about-us-box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 2%;
+        padding: 0 200px;
+    }
+    small{
+        text-align: start;
+    }
+    p{
+        text-align: start;
+    }
+}
